@@ -1,4 +1,6 @@
 
+  - Added trace() and table() aliases in FirePHP class
+  - (Issue 41) Use PHP doc in FirePHP
   - (Issue 39) Static logging method for object oriented API
 
 2008-10-01 - Release Version: 0.2.b.1
